--- a/GTFTSTG/.classpath
+++ b/GTFTSTG/.classpath
@@ -3,5 +3,11 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry exported="true" kind="lib" path="libs/gdx.jar" sourcepath="libs/gdx-sources.jar"/>
+	<classpathentry kind="lib" path="/home/aquasheep/Programming/Java Stuff/Game Dev/LibGDX/gdx-backend-lwjgl.jar" sourcepath="/home/aquasheep/Programming/Java Stuff/Game Dev/LibGDX/sources/gdx-backend-lwjgl-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/aquasheep/Programming/Java Stuff/Game Dev/LibGDX/sources/gdx-backend-lwjgl-sources.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/home/aquasheep/Programming/Java Stuff/Game Dev/LibGDX/gdx-backend-lwjgl-natives.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
